# celestite

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  version.cpp.in
.github/workflows/: test.yml
clst/: binary_file_stream.cpp  dso.cpp  error.cpp  sys_dirs.cpp  sys_utils.cpp  term.cpp  version.cpp.in  version.h
clst/clst/: any_ref.hpp  arena.hpp  binary_file_stream.hpp  binary_stream.hpp  builtins.h  channel.hpp  conqueue.hpp  constants.hpp  dso.hpp  endian.h  error.hpp  export.h  math.hpp  memory_cursor.hpp  morton.hpp  num_cast.hpp  ring_buffer.hpp  scope_guard.hpp  sys_dirs.hpp  sys_utils.hpp  term.hpp  termcolor.hpp  thread_pool.hpp  timer.hpp  traits.hpp  types.hpp  utilities.hpp  utils.hpp
clst/clst/detail/: lfs.h
clst/common/: exceptions.h
clst/concurrency/: channel.h  exceptions.h  simple_thread_pool.h  tpool.cpp  tpool.h
clst/container/: ring_buffer.h
clst/iter/: enumerate.h  nd.h  zip.h
clst/meta/: meta_list.h  sequence.h  traits.h  type_holder.h  utils.h
clst/numerical/: constants.h  exceptions.h  math.h  num_cast.h
clst/stream/: binary_stream.cpp  binary_stream.h  cursor.cpp  cursor.h  file_stream.cpp  file_stream.h  lfs.h
clst/strings/: fixed_string.h  type_name.h  typed_string.h
clst/util/: argparse.h  char_num.cpp  char_num.h  endian.h  endian_rw.h  throwing_ptr.h  timer.h  tuples.h  utilities.h
clst/util/types/: ints.h
test/: CMakeLists.txt  arena.cpp  channel.cpp  common.cpp  iter.cpp  num_cast.cpp  scope_guard.cpp  sequence.cpp  sys_dirs.cpp  test_macros.h  utils.cpp
